...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_gradient"
    tools:context=".ui.authentication.SignUpActivity">

    <EditText
        android:id="@+id/signUpEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="@string/EMAIL_HINT"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/EMAIL_HINT"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/signUpPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpPassword"
...
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/PASSWORD_HINT"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/PASSWORD_HINT"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signUpSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailText" />

    <Button
        android:id="@+id/signUpSubmitButton"
...
