<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_gradient">

    <TextView
        android:id="@+id/playerName"
        android:layout_width="244dp"
        android:layout_height="108dp"

        android:layout_marginTop="56dp"
        android:gravity="center"
        android:textAppearance="@color/cardview_light_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerPlayedGames"
        android:layout_width="323dp"
        android:layout_height="159dp"

        android:gravity="center"
        android:textAppearance="@color/cardview_light_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playerDiedGames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName" />

    <TextView
        android:id="@+id/playerDiedGames"
        android:layout_width="326dp"

        android:layout_height="118dp"
        android:layout_marginBottom="44dp"
        android:gravity="center"
        android:textAppearance="@color/cardview_light_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/goBackToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/goBackToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_rounded"
        android:paddingHorizontal="10dp"
        android:text="@string/go_back_to_main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />


</androidx.constraintlayout.widget.ConstraintLayout>