...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_gradient">

    <Button
        android:id="@+id/submitProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/submit"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        tools:layout_editor_absoluteX="31dp" />

    <EditText
        android:id="@+id/registerNameText"
        android:layout_width="334dp"
        android:layout_height="72dp"
        android:autofillHints="Enter your Name"
        android:background="@drawable/inputs_register_profile"
        android:drawableStart="@drawable/ic_baseline_person_register"
        android:drawablePadding="12dp"
...
