<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_button"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/leaderboard_button"
            android:title="@string/menu_leaderboard_button_text" />
    </group>
</menu>